# docs/swagger.json
@@ -144,6 +144,46 @@
             }
         },
         "/basket": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete a basket by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "basket"
+                ],
+                "summary": "Delete a basket",
+                "responses": {
+                    "200": {
+                        "description": "Basket deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/basket/get": {
             "get": {
                 "security": [
                     {
@@ -169,44 +209,6 @@
                             "items": {
                                 "$ref": "#/definitions/entity.ListBasketItem"
                             }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Delete a basket by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "basket"
-                ],
-                "summary": "Delete a basket",
-                "responses": {
-                    "200": {
-                        "description": "Basket deleted",
-                        "schema": {
-                            "type": "string"
                         }
                     },
                     "400": {
@@ -715,7 +717,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.ProductGet"
+                                "$ref": "#/definitions/entity.ProductResponse"
                             }
                         }
                     },
@@ -913,13 +915,6 @@
                         "description": "Price to filter",
                         "name": "price_to",
                         "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Product type",
-                        "name": "type",
-                        "in": "query",
-                        "required": true
                     },
                     {
                         "type": "string",
@@ -1659,44 +1654,6 @@
                 }
             }
         },
-        "entity.ProductGet": {
-            "type": "object",
-            "properties": {
-                "color": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "picture_urls": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "price": {
-                    "type": "number"
-                },
-                "sale_price": {
-                    "type": "number"
-                },
-                "size": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.ProductList": {
             "type": "object",
             "properties": {
@@ -1706,7 +1663,7 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.ProductGet"
+                        "$ref": "#/definitions/entity.ProductResponse"
                     }
                 },
                 "total_count": {
@@ -1721,6 +1678,47 @@
                     "type": "string"
                 },
                 "product_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.ProductResponse": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "discount_price": {
+                    "type": "number"
+                },
+                "final_price": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image_urls": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "price": {
+                    "type": "number"
+                },
+                "size": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
